# nowplaying-widget

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: development.md  layout.md  theme.md
docs/template_skin/: README.md  layout.template.toml  theme.template.toml
skins/Windows 11/: layout.toml  theme.toml
skins/aurora_vinyl/: layout.toml  theme.toml
skins/cutesy/: layout.toml  theme.toml
skins/gradient_demo/: layout.toml  theme.toml
skins/graphite/: layout.toml  theme.toml
skins/transparent_glass/: README.md  layout.toml  theme.toml
src/: config.rs  layout.rs  main.rs  theme.rs  ui_skin.rs  vinyl.rs
tests/: hello_world.rs  update_rate.rs
